ACC-2100 fix sonar issues